--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,11 @@
    "id": "user-note-utility",
    "title": "User Note Utility",
    "subtitle": "Delete, update, or append to a user's notes. Works on a set of users. Beta.",
-   "author": "Jay Hartzell"
+   "author": "Jay Hartzell",
+   "contentSecurity": {
+      "sandbox": {
+         "downloads": true,
+         "allow-downloads": true
+      }
+   }
 }
