--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,12 @@
 {
    "id": "user-note-utility",
    "title": "User Note Utility",
-   "subtitle": "Delete, update, or append to a user's notes. Works on a set of users. Beta.",
+   "subtitle": "Easily delete user notes or modify their properties.",
    "author": "Jay Hartzell",
+   "icon": {
+      "type": "url",
+      "value": "/assets/note_icon.png"
+   },
    "contentSecurity": {
       "sandbox": {
          "downloads": true,
