Refactor main component styles and theme to align with Cloud Apps Style Guide
- Updated typography styles in main.component.scss to use 'Roboto' font with specified weights for titles and running text.
- Enhanced form control styles to ensure consistent theming and improved accessibility.
- Added helper methods in main.component.ts for summarizing user process logs, including detailed modification descriptions.

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-   "id": "user-note-utility",
+   "id": "jayhartzell/note_utility",
    "title": "User Note Utility",
    "subtitle": "A utility for modifying or deleting user notes in bulk.",
    "author": "Jay Hartzell",
