--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "strongly-typed-events": "3.0.11",
     "tslib": "2.8.1",
     "uuid": "11.0.5",
+    "xlsx": "^0.18.5",
     "zone.js": "0.14.10"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "@types/jasmine": "5.1.7",
     "@types/lodash": "4.17.16",
     "@types/node": "18.19.80",
+    "@types/xlsx": "^0.0.35",
     "@vendure/ngx-translate-extract": "9.3.1",
     "jasmine-core": "5.2.0",
     "karma": "6.4.4",
